# llvm_stuff

bfast/: CMakeLists.txt  cmake.toml  cmkr.cmake
bfast/include/: block.hpp  helpers.hpp
bfast/include/ir/: binary.hpp  expression.hpp  immediate.hpp  instruction.hpp  ir.hpp  unary.hpp  variable.hpp
bfast/include/visitors/: print_visitor.hpp  visitor.hpp
bfast/samples/: life.bf
bfast/src/: block.cpp  helpers.cpp  main.cpp
bfast/src/ir/: binary.cpp  expression.cpp  immediate.cpp  instruction.cpp  unary.cpp  variable.cpp
bfast/src/visitors/: print_visitor.cpp
llvmbf/: README.md  cmake.toml
llvmbf/intrin/: build.sh  intrin.cpp  intrin_64.bc  intrin_64.ll
llvmbf/samples/: fib.ll  helloworld.ll  mandelbrot.ll  test.bf
llvmbf/src/: lifter.cpp  lifter.hpp  main.cpp  utils.hpp
llvmbf/src/passes/: peepholepass.cpp  peepholepass.hpp
sprushVM/: CMakeLists.txt  README.md
sprushVM/bytecode/: bytecode  bytecode.ll
sprushVM/src/: instructions.hpp  main.cpp  utils.hpp
